<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:hint="@string/input_1_example_input"
                app:boxStrokeColor="@color/colorPrimary"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789,"
                    android:fontFamily="@font/poppins_regular"
                    android:imeOptions="actionNext"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_16"
                android:hint="@string/input_2_example_input"
                app:boxStrokeColor="@color/colorPrimary"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789,"
                    android:fontFamily="@font/poppins_regular"
                    android:imeOptions="actionNext"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:hint="@string/input_3_example_input"
                app:boxStrokeColor="@color/colorPrimary"
                app:hintTextColor="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789,"
                    android:fontFamily="@font/poppins_regular"
                    android:imeOptions="actionDone"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCalculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:fontFamily="@font/poppins_regular"
                android:includeFontPadding="false"
                android:minWidth="@dimen/dp_200"
                android:minHeight="60dp"
                android:text="@string/calculate"
                android:textAllCaps="false"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="@dimen/dp_16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

            <TextView
                android:id="@+id/textViewReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_8"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/reset"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/text_blue"
                app:layout_constraintEnd_toEndOf="@+id/buttonCalculate"
                app:layout_constraintStart_toStartOf="@+id/buttonCalculate"
                app:layout_constraintTop_toBottomOf="@+id/buttonCalculate" />

            <TextView
                android:id="@+id/textViewIntersect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/intersect"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewReset" />

            <TextView
                android:id="@+id/textViewUnion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/union"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewIntersect" />


            <TextView
                android:id="@+id/textViewHighestNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/highest_number"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewUnion" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/groupResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:constraint_referenced_ids="textViewIntersect,textViewUnion,textViewHighestNumber, textViewLabel"
                tools:visibility="visible" />


            <TextView
                android:id="@+id/textViewLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_16"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/developed_by_ashish_tripathi"
                android:textAppearance="?android:attr/textAppearanceSmall"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/buttonCalculate"
                app:layout_constraintStart_toStartOf="@+id/buttonCalculate"
                app:layout_constraintTop_toBottomOf="@+id/textViewHighestNumber" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>